# 2026-p8-yessica-s

./: .gitattributes  .gitignore  .terraform.lock.hcl  Dockerfile  Dockerfile.dev  README.md  autoscaling.tf  db.tf  docker-compose.yaml  ecs.tf  image.tf  lb.tf  main.tf  planners-and-studiers.js  pyproject.toml
todo/: __init__.py  log_formatter.py
todo/app/: index.html  styles.6423f328148cbbbe.css
todo/models/: __init__.py  todo.py
todo/views/: routes.py
